--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-# Compiled class file
-*.class
+/target/
+/logs/
+!.mvn/wrapper/maven-wrapper.jar
+.mvn/
+/src/main/resources/application-local.properties
 
-# Log file
-*.log
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# BlueJ files
-*.ctxt
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# In the Apple macOS operating system,
+# .DS_Store is a file that stores custom attributes of its containing folder
+.DS_Store
