--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=goat
 app.base.url=https://henamedmarkt.com
-app.backend.url=https://localhost:8080
+app.backend.url=https://goat-1fck.onrender.com
 #spring.datasource.url=jdbc:mysql://193.203.166.146/u845376580_henarepo
 #spring.datasource.username=u845376580_admin
 #spring.datasource.password=T3chn0l0gy@007
