--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=goat
 app.base.url=https://henamedmarkt.com
-app.backend.url=https://goat-1fck.onrender.com
+#app.backend.url=https://goat-1fck.onrender.com
+app.backend.url=http://ec2-54-221-42-200.compute-1.amazonaws.com
 #spring.datasource.url=jdbc:mysql://193.203.166.146/u845376580_henarepo
 #spring.datasource.username=u845376580_admin
 #spring.datasource.password=T3chn0l0gy@007
@@ -39,6 +40,7 @@ client.log.response.summary=true
 #spring.datasource.hikari.connection-timeout=30000
 logging.level.com.saz.se.goat.aspect=INFO
 logging.level.com.zaxxer.hikari=ERROR
+
 
 #spring.mail.properties.mail.smtp.ssl.protocols= TLSv1.2
 #spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
