--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Log in to Azure
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIAL }}
+        creds: ${{ secrets.AZURE_CREDANTIAL }}
 
     - name: Log in to Azure Container Registry
       run: |
