--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Log in to Azure Container Registry
       run: |
-        echo ${{ secrets.AZURE_REGISTRY_PASSWORD }} | docker login ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }} \
+        echo ${{ secrets.AZURE_PASSWORD }} | docker login ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }} \
           -u ${{ secrets.AZURE_REGISTRY_USERNAME }} --password-stdin
 
     - name: Build and Push Docker Image to ACR
