--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ app.backend.url=http://localhost:8080
 #spring.datasource.url=jdbc:mysql://193.203.166.146/u845376580_henarepo
 #spring.datasource.username=u845376580_admin
 #spring.datasource.password=T3chn0l0gy@007
-spring.datasource.url=jdbc:mysql://89.117.27.52/u440403374_hena
-spring.datasource.username=u440403374_root
+#spring.datasource.url=jdbc:mysql://89.117.27.52/u440403374_hena
+#spring.datasource.username=u440403374_root
+#spring.datasource.password=H3n4@2000
+spring.datasource.url=jdbc:mysql://henadb.mysql.database.azure.com/henadatabase
+spring.datasource.username=henaadmin
 spring.datasource.password=H3n4@2000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
