--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=goat
-app.base.url=https://shop.henamedmarkt.com
-#app.backend.url=https://goat-1fck.onrender.com
+app.base.url=https://henamedmarkt.com
 app.backend.url=https://henaapi-ejbeate7gdajagaq.canadacentral-01.azurewebsites.net
 #spring.datasource.url=jdbc:mysql://193.203.166.146/u845376580_henarepo
 #spring.datasource.username=u845376580_admin
